--- a/src/app/components/header/Header.module.css
+++ b/src/app/components/header/Header.module.css
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center; 
   align-items: center;
+  flex-wrap: wrap;
   background-color: #000000;
   padding: 16px 36px;
   font-family: var(--font-sans);
@@ -28,4 +29,10 @@
   text-decoration: none;
   color: var(--foreground);
   transition: color 0.2s ease;
+}
+
+@media (max-width: 768px) {
+  .lista {
+    display: none;
+  }
 }
